--- a/week-07/day-2/loginform.html
+++ b/week-07/day-2/loginform.html
@@ -16,9 +16,9 @@
     <main>
         <form action="/" method="post">
             <h2>Account Login</h2>
-            <label for="username">Username</label>
+            <label for="username">USERNAME</label>
             <input type="text" name="username" id="username" required autofocus>
-            <label for="password">Password</label>
+            <label for="password">PASSWORD</label>
             <input type="password" name="password" id="password" required pattern="[0-9a-zA-z]{8,12}"
                 title="Enter a password consisting of 8-12 digits or letters">
             <div class="eye">
