it just needs to find the right position

--- a/week-07/day-2/signupform.html
+++ b/week-07/day-2/signupform.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="signup-style.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 
     <title>Login Form</title>
@@ -27,12 +26,12 @@
         </form>
       </div>
       <div>
-        <button type="button" id="or">OR</button>
+        <button type="button" id="or">OR</button><br>
       </div>
       <div>
-        <button type="button" id="facebook">Log in with facebook</button><br>
-        <button type="button" id="twitter">Log in with Twitter</button><br>
-        <button type="button" id="google">Log in with Google</button>
+        <button type="button" id="facebook" class="social">Log in with facebook</button><br>
+        <button type="button" id="twitter" class="social">Log in with Twitter</button><br>
+        <button type="button" id="google" class="social">Log in with Google</button>
       </div>
     </main>
 </body>
